romana-install/roles/stack/kubeadm/postinstall/files/demo/pod-backend.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-backend
  namespace: tenant-a
  labels:
    app: nginx
    romana.io/segment: backend
spec:
  containers:
  - name: nginx
    image: rstarmer/nginx-curl
    ports:
    - containerPort: 80
