romana-install/roles/stack/kubeadm/postinstall/files/demo/romana-np-frontend-to-backend.yml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
 name: pol1
 namespace: tenant-a
spec:
 podSelector:
  matchLabels:
   romana.io/segment: backend
 ingress:
 - from:
   - podSelector:
      matchLabels:
       romana.io/segment: frontend
   ports:
    - protocol: TCP
      port: 80
